--- a/dev-java/ibm-jdk/ChangeLog
+++ b/dev-java/ibm-jdk/ChangeLog
@@ -1,6 +1,22 @@
 # ChangeLog for dev-java/ibm-jdk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk/ChangeLog,v 1.5 2002/04/10 13:49:25 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk/ChangeLog,v 1.6 2002/05/12 17:49:25 karltk Exp $
+
+*ibm-jdk-1.3.1-r1 (12 May 2002)
+
+  12 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ibm-jdk-1.3.1-r1.ebuild files/digest-ibm-jdk-1.3.1-r1:
+
+  Disabled browser plugin as it does not work.
+
+  Removed ibm-jdk-1.3.1.ebuild files/digest-ibm-jdk-1.3.1
+
+*ibm-jdk-1.3.0-r4 (12 May 2002)
+
+  12 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ibm-jdk-1.3.0-r4.ebuild files/digest-ibm-jdk-1.3.0-r4:
+
+  Disabled browser plugin as it does not work.
+
+  Removed ibm-jdk-1.3.0-r3.ebuild files/digest-ibm-jdk-1.3.0-r3
 
 *ibm-jdk-1.3.1 (10 Apr 2002)
 
