--- a/dev-java/ibm-jre/ChangeLog
+++ b/dev-java/ibm-jre/ChangeLog
@@ -1,6 +1,22 @@
 # ChangeLog for dev-java/ibm-jre
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jre/ChangeLog,v 1.5 2002/04/10 13:43:02 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jre/ChangeLog,v 1.6 2002/05/12 17:49:25 karltk Exp $
+
+*ibm-jre-1.3.0-r3 (12 May 2002)
+
+  12 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ibm-jre-1.3.0-r3.ebuild files/digest-ibm-jre-1.3.0-r3:
+
+  Disabled browser plugin as it doesn't work.
+
+  Removed ibm-jre-1.3.0-r2.ebuild files/digest-ibm-jre-1.3.0-r2
+
+*ibm-jre-1.3.1-r1 (12 May 2002)
+
+  12 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ibm-jre-1.3.1-r1.ebuild files/digest-ibm-jre-1.3.1-r1:
+
+  Disabled browser plugin as it doesn't work.
+
+  Removed ibm-jre-1.3.1.ebuild files/digest-ibm-jre-1.3.1
 
 *ibm-jre-1.3.1 (10 Apr 2002)
 
