--- a/kde-base/kdemultimedia/ChangeLog
+++ b/kde-base/kdemultimedia/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.4 2002/04/30 11:45:11 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.5 2002/05/12 18:26:23 danarmak Exp $
+
+  12 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  
+  Disabled building with alsa. The kdemm/alsa.9 bug isn't going to disappear soon it seems.
 
 *kdemultimedia-3.0-r1 (30 Apr 2002)
 
@@ -29,3 +33,4 @@
   comments should well explained and written in clean English. The details about
   writing correct changelogs are explained in the skel.ChangeLog file which you
   can find in the root directory of the portage repository.
+
