--- a/app-cdr/arson/ChangeLog
+++ b/app-cdr/arson/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/arson
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/arson/ChangeLog,v 1.2 2002/03/09 11:39:57 guidob Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/arson/ChangeLog,v 1.3 2002/05/12 19:45:59 verwilst Exp $
+
+*arson-0.9.5 (12 May 2002)
+
+  12 May 2002; Bart Verwilst <verwilst@gentoo.org> ebuild :
+
+  Version update. Fully working KDE 3 prog now, with cdparanoia support.
 
 *arson-0.9.4 (9 Mar 2002)
 
