--- a/app-editors/vi/ChangeLog
+++ b/app-editors/vi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/vi/ChangeLog,v 1.1 2002/05/12 19:40:28 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/vi/ChangeLog,v 1.2 2002/05/12 19:52:52 spider Exp $
+
+vi-3.7 (12 May 2002)
+  12 May 2002; Spider <spider@gentoo.org> :
+  Now that I've added the Caldera LICENSE I'm changing this one too  
+
+
 
 *vi-3.7  (12 May 2002)
   12 May 2002; Spider <spider@gentoo.org> ChangeLog vi-3.7.ebuild :
