--- a/app-sci/magic/ChangeLog
+++ b/app-sci/magic/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for app-eng/magic
+# ChangeLog for app-sci/magic
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $ Header: $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/magic/ChangeLog,v 1.2 2002/05/13 00:47:16 rphillips Exp $
 
 * magic-7.1 (30 April 2002)
 
