--- a/media-sound/alsa-driver/ChangeLog
+++ b/media-sound/alsa-driver/ChangeLog
@@ -1,8 +1,14 @@
 # ChangeLog for media-sound/alsa-driver
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.9 2002/05/08 05:53:41 jnelson Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.10 2002/05/13 03:04:21 agenkin Exp $
 
 *alsa-driver-0.9.0_rc1 (27 Apr 2002)
+
+  12 May 2002; Arcady Genkin <agenkin@thpoon.com>
+	alsa-driver-0.9.0_rc1-r6.ebuild :
+
+  Updated the 'alsasound' init script so that it runs before the modules
+  from /etc/modules.autoload get loaded.  This relies on baselayout >=1.7.9.
 
   8 May 2002; Jon Nelson <jnelson@gentoo.org>
 	alsa-driver-0.9.0_rc1-r5.ebuild :
