--- a/net-im/everybuddy/ChangeLog
+++ b/net-im/everybuddy/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/everybuddy
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/everybuddy/ChangeLog,v 1.3 2002/04/04 11:01:58 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/everybuddy/ChangeLog,v 1.4 2002/05/13 18:24:41 verwilst Exp $
+
+*everybuddy-0.4.0 (13 May 2002)
+  13 May 2002; Bart Verwilst <verwilst@gentoo.org>
+  Updated to newest version, removed older versions.
 
 *everybuddy-0.2.1-r3 (04 Apr 2002)
   04 Apr 2002; Seemant Kulleen <seemant@gentoo.org>
