--- a/net-misc/djbdns/ChangeLog
+++ b/net-misc/djbdns/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for net-misc/djbdns
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/djbdns/ChangeLog,v 1.2 2002/03/02 02:33:18 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/djbdns/ChangeLog,v 1.3 2002/05/13 18:30:47 bangert Exp $
+
+*djbdns-1.05-r2 (13 May 2002)
+
+  12 May 2002; Thilo Bangert <bangert@gentoo.org> .ebuild :
+
+  added LICENSE, added setup scripts (by banger@gentoo.org and gontran@gontran.net)
+  removed old setup scripts
+
+  7 May 2002; Thilo Bangert <bangert@gentoo.org> .ebuild :
+ 
+  added automatic creation of users
+
 
 *djbdns-1.05-r1 (1 Mar 2002)
 
