--- a/sys-apps/cronbase/files/README
+++ b/sys-apps/cronbase/files/README
@@ -1,5 +1,5 @@
 
-$ Header: $
+$Header: /var/cvsroot/gentoo-x86/sys-apps/cronbase/files/README,v 1.5 2002/05/13 18:34:05 bangert Exp $
 
 22 Apr 2oo2; Thilo Bangert <bangert@gentoo.org>
 
