--- a/x11-wm/waimea/ChangeLog
+++ b/x11-wm/waimea/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for x11-wm/waimea
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/waimea/ChangeLog,v 1.2 2002/05/09 15:21:59 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/waimea/ChangeLog,v 1.3 2002/05/13 23:34:57 spider Exp $
+
+*waimea-0.3.1-r1 (13 May 2002)
+  13 May 2002; Spider <spider@gentoo.org> waimea-0.3.1-r1.ebuild 
+  update dependency
+  
+*waimea-0.3.1 (12 May 2002)
+  12 May 2002; Spider <spider@gentoo.org> waimea-0.3.1.ebuild : 
+  cleaned out /etc/skel thing, latest and greatest
 
 *waimea-0.3.0-r1 (9 May 2002)
   9 May 2002; Spider <spider@gentoo.org> :
