--- a/dev-java/ibm-jdk/ChangeLog
+++ b/dev-java/ibm-jdk/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for dev-java/ibm-jdk
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk/ChangeLog,v 1.6 2002/05/12 17:49:25 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jdk/ChangeLog,v 1.7 2002/05/14 00:01:03 karltk Exp $
 
 *ibm-jdk-1.3.1-r1 (12 May 2002)
+
+  14 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ibm-jdk-1.3.1-r1.ebuild files/digest-ibm-jdk-1.3.1-r1:
+
+  Fixed the creation of a spurious /usr/ibm-jdk-1.3.1/share.
 
   12 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ibm-jdk-1.3.1-r1.ebuild files/digest-ibm-jdk-1.3.1-r1:
 
@@ -11,6 +15,10 @@
   Removed ibm-jdk-1.3.1.ebuild files/digest-ibm-jdk-1.3.1
 
 *ibm-jdk-1.3.0-r4 (12 May 2002)
+
+  14 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ibm-jdk-1.3.0-r4.ebuild files/digest-ibm-jdk-1.3.0-r4:
+
+  Fixed the creation of a spurious /usr/ibm-jdk-1.3.0/share.
 
   12 May 2002; Karl Trygve Kalleberg <karltk@gentoo.org> ibm-jdk-1.3.0-r4.ebuild files/digest-ibm-jdk-1.3.0-r4:
 
