--- a/media-sound/xmms-mad/ChangeLog
+++ b/media-sound/xmms-mad/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms-mad/ChangeLog,v 1.1 2002/05/01 14:48:34 sandymac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms-mad/ChangeLog,v 1.2 2002/05/14 02:37:27 sandymac Exp $
+
+*xmms-mad-0.0.9 (13 May 2002)
+
+  13 May 2002; William McArthur <sandymac@gentoo.org> xmms-mad-0.0.8.ebuild :
+
+  New upstream release, just bumped the ebuild number.
 
 *xmms-mad-0.0.8 (1 May 2002)
 
