--- a/x11-misc/Xautoconfig/ChangeLog
+++ b/x11-misc/Xautoconfig/ChangeLog
@@ -1,9 +1,12 @@
 # ChangeLog for x11-misc/Xautoconfig
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/Xautoconfig/ChangeLog,v 1.1 2002/05/09 14:57:34 daybird Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/Xautoconfig/ChangeLog,v 1.2 2002/05/14 04:01:21 daybird Exp $
 
 *Xautoconfig-0.15-(May 8 2002)
 
+  13 May 2002; D. Chamberlain <daybird@gentoo.org>
+  Added dep for pciutils.
+  
   8 May 2002; D. Chamberlain <daybird@gentoo.org> ChangeLog :
 
   Initial release of Xautoconfig, patched for Gentoo by Mark Guertin.
