--- a/net-mail/ezmlm/ChangeLog
+++ b/net-mail/ezmlm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/ezmlm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/ezmlm/ChangeLog,v 1.2 2002/04/27 21:46:44 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/ezmlm/ChangeLog,v 1.3 2002/05/14 18:00:49 bangert Exp $
+
+  14 May 2002; Thilo Bangert <bangert@gentoo.org> ChangeLog:
+
+  fixor (bug #2729) - added LICENSE 
 
 *ezmlm-0.53 (25 Mar 2002)
 
