--- a/app-misc/colortail/ChangeLog
+++ b/app-misc/colortail/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for app-misc/colortail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/colortail/ChangeLog,v 1.2 2002/04/27 23:08:35 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/colortail/ChangeLog,v 1.3 2002/05/14 21:27:03 g2boojum Exp $
 
+*colortail-0.3.0-r1 (14 May 2002)
+
+  14 May 2002; Grant Goodyear <g2boojum@gentoo.org> :
+
+  Added a symlink from /usr/bin/wrappers/tail to /usr/bin/colortail.
+  
 *colortail-0.3.0 (12 Feb 2002)
 
   12 Feb 2002; mike polniak <mikpolniak@adelphia.net> colortail-0.3.0.ebuild :
