--- a/x11-libs/gtkmm/ChangeLog
+++ b/x11-libs/gtkmm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/gtkmm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkmm/ChangeLog,v 1.5 2002/05/01 14:35:57 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkmm/ChangeLog,v 1.6 2002/05/15 01:39:13 spider Exp $
+
+
+*gtkmm-1.3.14 (14 May 2002)
+  14 May 2002; Spider <spider@gentoo.org>; gtkmm-1.3.14.ebuild :
+  version update
+    
 
 *gtkmm-1.3.13 (1 May 2002)
   1 May 2002; Spider <spider@gentoo.org>; gtkmm-1.3.13.ebuild :
