--- a/kde-base/kdenetwork/ChangeLog
+++ b/kde-base/kdenetwork/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdenetwork
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork/ChangeLog,v 1.4 2002/05/11 15:55:29 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork/ChangeLog,v 1.5 2002/05/15 13:35:51 verwilst Exp $
+
+*kdenetwork-3.0.1 (14 May 2002)
+
+  14 May 2002; Bart Verwilst <verwilst@gentoo.org> Changelog :
+
+  New bugfix-release.. Enjoy!
 
 *kdenetwork-3.0-r1 (11 May 2002)
 
