--- a/kde-base/kdeartwork/ChangeLog
+++ b/kde-base/kdeartwork/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeartwork
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.4 2002/04/23 04:55:45 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.5 2002/05/15 13:38:09 verwilst Exp $
+
+*kdeartwork-3.0.1 (14 May 2002)
+
+  14 May 2002; Bart Verwilst <verwilst@gentoo.org> Changelog :
+
+  New bugfix-release.. Enjoy!
 
 *kdeartwork-3.0-r1 (22 Apr 2002)
 
