--- a/kde-base/kdegraphics/ChangeLog
+++ b/kde-base/kdegraphics/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdegraphics
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.4 2002/04/12 17:01:59 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdegraphics/ChangeLog,v 1.5 2002/05/15 13:41:57 verwilst Exp $
+
+*kdegraphics-3.0.1 (14 May 2002)
+
+  14 May 2002; Bart Verwilst <verwilst@gentoo.org> Changelog :
+
+  KDE 3.0.1 ebuilds. Fully tested.
 
   12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> kdegraphics-3.0.ebuild
   kdegraphics-2.2.2.ebuild :
