--- a/app-doc/qt-docs/ChangeLog
+++ b/app-doc/qt-docs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-doc/qt-docs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-doc/qt-docs/ChangeLog,v 1.2 2002/03/26 07:53:13 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/qt-docs/ChangeLog,v 1.3 2002/05/15 19:42:43 danarmak Exp $
+
+*qt-docs-3.0.4.1 (15 May 2002)
+
+  15 May 2002; Dan Armak <danarmak@gentoo.org> Changelog:
+  
+  Update for this new version
 
 *qt-docs-3.0.3 (26 Mar 2002)
 
