--- a/net-im/gaim/ChangeLog
+++ b/net-im/gaim/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.13 2002/05/16 17:29:52 sandymac Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gaim/ChangeLog,v 1.14 2002/05/17 04:45:51 blocke Exp $
+
+
+*gaim-0.58-r1 (17 May 2002)
+
+  17 May 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.58-r1.ebuild :
+
+  Building of both gaim and gaim_applet executables fixed (econf added back).
+  Fixes bug #2786.
 
 *gaim-0.58 (16 May 2002)
 
