--- a/net-misc/knetfilter/ChangeLog
+++ b/net-misc/knetfilter/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/knetfilter
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/knetfilter/ChangeLog,v 1.2 2002/03/13 22:22:28 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/knetfilter/ChangeLog,v 1.3 2002/05/17 11:52:05 danarmak Exp $
+
+*knbetfilter-3.0.1 (17 May 2002)
+
+  17 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  
+  Forgot to put 3.0.0 in here; that was the kde3 version. This is a bugfix release.
 
 *knetfilter-2.2.5 (1 Feb 2002)
 
