--- a/app-emulation/zsnes/ChangeLog
+++ b/app-emulation/zsnes/ChangeLog
@@ -1,7 +1,12 @@
 # ChangeLog for app-emulation/zsnes
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/zsnes/ChangeLog,v 1.3 2002/05/08 08:48:20 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/zsnes/ChangeLog,v 1.4 2002/05/17 14:13:25 danarmak Exp $
 
+*zsnes-1.337-r2 (17 May 2002)
+  
+  17 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
+
+  Fix bugs #2746, #2783 - remove a comment from init.asm which confused nasm.
 
 *zsnes-1.337-r1 (7 May 2002)
   7 May 2002; Spider <spider@gentoo.org> zsnes-1.337-r1.ebuild zsnes-1.337.ebuild :
