--- a/net-ftp/curl/ChangeLog
+++ b/net-ftp/curl/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-ftp/curl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/curl/ChangeLog,v 1.1 2002/02/01 21:53:32 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/curl/ChangeLog,v 1.2 2002/05/18 01:59:16 g2boojum Exp $
+
+*curl-7.9.7 (17 May 2002)
+
+  17 May 2002; Grant Goodyear <g2boojum@gentoo.org> :
+  
+  Version bump.  Seems to work better when compiled w/ gcc 3.0.4.
 
 *curl-7.9.3 (1 Feb 2002)
 
