--- a/media-video/drip/ChangeLog
+++ b/media-video/drip/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/drip
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/drip/ChangeLog,v 1.3 2002/04/06 15:54:48 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/drip/ChangeLog,v 1.4 2002/05/19 19:03:15 azarah Exp $
+
+*drip-0.8.1-r2 (19 May 2002)
+
+  19 May 2002; M.Schlemmer <azarah@gentoo.org> drip-0.8.1-r2.ebuild :
+
+  Should compile with avifile-0.7.4 now.
 
 *drip-0.8.1-r1 (6 Apr 2002)
 
