--- a/net-im/silc-client/ChangeLog
+++ b/net-im/silc-client/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/silc-client/ChangeLog,v 1.1 2002/04/12 19:53:33 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/silc-client/ChangeLog,v 1.2 2002/05/19 23:48:05 rphillips Exp $
+
+*silc-client-0.9.1 (19 May 2002)
+
+  19 May 2002; Ryan Phillips <rphillips@gentoo.org> silc-client-0.9.1.ebuild :
+
+  Updated package to new version
 
 *silc-client-0.7.6.2 (11 Apr 2002)
   11 Apr 2002; Spider <spider@gentoo.org>
