--- a/dev-util/arch/ChangeLog
+++ b/dev-util/arch/ChangeLog
@@ -1,6 +1,12 @@
-# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
+# ChangeLog for dev-util/arch
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/arch/ChangeLog,v 1.3 2002/04/09 11:19:40 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/arch/ChangeLog,v 1.4 2002/05/20 00:45:24 rphillips Exp $
+
+*arch-1.0_pre15 (19 Apr 2002)
+
+  19 Apr 2002; Ryan Phillips <rphillips@gentoo.org> arch-1.0_pre15.ebuild:
+  
+  Bumped up version to arch-1.0_pre15.
 
 *arch-1.0_pre14 (06 Apr 2002)
 
