--- a/media-gfx/grace/ChangeLog
+++ b/media-gfx/grace/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for media-gfx/grace
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/grace/ChangeLog,v 1.2 2002/04/01 20:54:17 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/grace/ChangeLog,v 1.3 2002/05/20 02:47:58 seemant Exp $
+
+*grace-5.1.7-r2 (19 May 2002)
+
+  19 May 2002; Seemant Kulleen <seemant@gentoo.org> grace-5.1.7-r2.ebuild
+  files/digest-grace-5.1.7-r2 :
+
+  updated the libpng dependency info which was written incorrectly
+  Thanks to vt@vt.fermentas.lt in bug #2780
 
 *grace-5.1.7 (1 Apr 2002)
 
