--- a/kde-base/kdeaddons/ChangeLog
+++ b/kde-base/kdeaddons/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdeaddons
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.2 2002/04/04 20:09:22 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.3 2002/05/20 17:06:42 danarmak Exp $
+
+  20 Apr 2002; Dan Armak <danarmak@gentoo.org. Changelog:
+  
+  Fix sdl dep, now it only goes in if use sdl is on.
 
 *kdeaddons-3.0 (4 Apr 2002)
 
