--- a/sys-devel/perl/ChangeLog
+++ b/sys-devel/perl/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-devel/perl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/perl/ChangeLog,v 1.3 2002/05/05 10:56:53 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/perl/ChangeLog,v 1.4 2002/05/21 03:46:28 prez Exp $
+
+*perl-5.6.1-r4 (20 May 2002)
+
+  20 May 2002; Preston A. Elder <prez@gentoo.org> perl-5.6.1-r4.ebuild
+  files/digest-perl-5.6.1-r4 :
+
+  Added ebuild that works with gcc 3.1.
 
 *perl-5.6.1-r3 (5 May 2002)
 
