--- a/dev-libs/pilot-link/ChangeLog
+++ b/dev-libs/pilot-link/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-libs/pilot-link
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/pilot-link/ChangeLog,v 1.2 2002/04/06 16:23:27 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/pilot-link/ChangeLog,v 1.3 2002/05/21 04:37:35 seemant Exp $
+
+*pilot-link-0.10.99 (20 May 2002)
+
+  20 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  pilot-link-0.10.99.ebuild files/digest-pilot-link-0.10.99 :
+
+  This is a developer release of pilot-link, but it works with a wider
+  variety of hardware.  gnome-pilot had to be patched for it as well.  the
+  new gnome-pilot and this are masked for the present.
 
  06 Apr 2002; G.Bevin <gbevin@gentoo.org> files/pilot-link-0.9.6-gcc3.diff :
 
