--- a/sys-kernel/redhat-sources/ChangeLog
+++ b/sys-kernel/redhat-sources/ChangeLog
@@ -1,7 +1,14 @@
 # ChangeLog for sys-kernel/redhat-sources
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/redhat-sources/ChangeLog,v 1.1 2002/04/28 04:28:02 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/redhat-sources/ChangeLog,v 1.2 2002/05/21 07:07:34 blocke Exp $
 
+*redhat-sources-2.4.18-r4 (21 May 2002)
+
+  21 May 2002; Bruce A. Locke <blocke@shivan.org> redhat-sources-2.4.18-r4.ebuild :
+
+  Redhat kernel 2.4.18-4 (official update to Redhat 7.3 kernel).  Older
+  version removed due to potential instability and version conflict.
+  
 *redhat-sources-2.4.18.0.13 (28 Apr 2002)
 
   28 Apr 2002; Bruce A. Locke <blocke@shivan.org> redhat-sources-2.4.18.0.13.ebuild :
