--- a/net-www/skipstone/ChangeLog
+++ b/net-www/skipstone/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-www/skipstone
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/skipstone/ChangeLog,v 1.8 2002/05/20 02:11:07 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/skipstone/ChangeLog,v 1.9 2002/05/21 14:00:20 seemant Exp $
+
+*skipstone-0.8.2 (20 May 2002)
+
+  20 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  skipstone-0.8.2-r1.ebuild files/digest-skipstone-0.8.2-r1 :
+
+  NLS fixes. This closes bug #2871 by waschb@gwdg.de (Andreas Waschbuesch)
 
 *skipstone-0.8.2 (19 May 2002)
 
