--- a/net-mail/spamassassin/ChangeLog
+++ b/net-mail/spamassassin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/spamassassin
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/spamassassin/ChangeLog,v 1.3 2002/04/12 19:42:20 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/spamassassin/ChangeLog,v 1.4 2002/05/21 20:33:11 g2boojum Exp $
+
+*spamassassin-2.20 (21 May 2002)
+
+  21 May 2002; Grant Goodyear <g2boojum@gentoo.org> :
+
+  Version bump.  Also dodoc'd some useful files.
 
 *spamassassin-2.11-r1 (12 Apr 2002)
 
