--- a/dev-libs/libol/ChangeLog
+++ b/dev-libs/libol/ChangeLog
@@ -1,12 +1,12 @@
 # ChangeLog for dev-libs/libol
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libol/ChangeLog,v 1.2 2002/05/22 02:23:21 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libol/ChangeLog,v 1.3 2002/05/22 02:25:14 blocke Exp $
 
 *libol-0.3.2 (21 May 2002)
 
   21 May 2002; Bruce A. Locke <blocke@shivan.org> libol-0.3.2.ebuild:
 
-  New ebuild for devel branch version... masked out for now.
+  New ebuild for devel branch version
 
 *libol-0.2.23 (1 Feb 2002)
 
