--- a/x11-libs/gtkmm/ChangeLog
+++ b/x11-libs/gtkmm/ChangeLog
@@ -1,7 +1,15 @@
 # ChangeLog for x11-libs/gtkmm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkmm/ChangeLog,v 1.6 2002/05/15 01:39:13 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtkmm/ChangeLog,v 1.7 2002/05/22 16:54:19 mkennedy Exp $
 
+*gtkmm-1.2.9 (22 May 2002)
+
+  22 May 2002; Matthew Kennedy <mkennedy@gentoo.org>;
+  gtkmm-1.2.9-r1.ebuild, ChangeLog, files/digest-gtkmm-1.2.9,
+  files/gtkmm-1.2.9-gcc3.1-gentoo.patch :
+
+  Patch to support gcc3.1 (only required for 1.2.9 -- fixed upstream
+  in CVS)
 
 *gtkmm-1.3.14 (14 May 2002)
   14 May 2002; Spider <spider@gentoo.org>; gtkmm-1.3.14.ebuild :
