--- a/x11-wm/sawfish-merlin/ChangeLog
+++ b/x11-wm/sawfish-merlin/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for x11-wm/sawfish
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish-merlin/ChangeLog,v 1.2 2002/04/07 15:28:17 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish-merlin/ChangeLog,v 1.3 2002/05/22 18:33:54 spider Exp $
+
+*sawfish-merlin-1.0.1-r2 (22 May 2002)
+  22 May 2002; Spider <spider@gentoo.org> ChangeLog sawfish-merlin-1.0.1-r2.ebuild
+  Fix changelog
+  fix rep-gtk dependency from dev-libs to x11-libs 
+
+sawfish-merlin-1.0.1-r1 (09 Apr 2002)
+ 09 Apr 2002; Spider <spider@gentoo.org> :
+  Fix >=x11-lib/gtk+-1.2.nn to =x11-lib/gtk+-1.2*
 
 *sawfish-merlin-1.0.1-r1 (07 Apr 2002)
 
