--- a/net-www/galeon/ChangeLog
+++ b/net-www/galeon/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-www/galeon
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.9 2002/05/21 21:18:15 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/galeon/ChangeLog,v 1.10 2002/05/22 19:50:44 mkennedy Exp $
+
+*galeon-1.2.1-r2 (22 May 2002)
+
+  22 May 2002; Matthew Kennedy <mkennedy@gentoo.org>
+  galeon-1.2.1-r2.ebuild, ChangeLog, files/digest-galeon-1.2.1-r2,
+  files/galeon-1.2.1-gcc3.1.patch :
+
+  include patch to build with gcc3
 
 *galeon-1.2.1-r1 (21 May 2002)
 
