--- a/gnome-base/eel/ChangeLog
+++ b/gnome-base/eel/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/eel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.3 2002/04/15 06:52:38 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/eel/ChangeLog,v 1.4 2002/05/22 20:53:28 spider Exp $
+
+
+*eel-1.1.14 (22 May 2002)
+  22 May 2002; Spider <spider@gentoo.org> eel-1.1.14.ebuild: 
+  gnome2 branch of eel
 
 *eel-1.0.2-r2 (14 Apr 2002)
 
