--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.5 2002/04/13 08:25:39 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.6 2002/05/22 21:56:34 spider Exp $
+
+
+*control-center-1.99.10 (22 May 2002)
+  22 May 2002; Spider <spider@gentoo.org> control-center-1.99.10.ebuild: 
+  gnome2 branch
 
 *control-center-1.4.0.5 (06 Apr 2002)
   06 Apr 2002; Spider <spider@gentoo.org> control-center-1.4.0.5.ebuild :
