--- a/net-www/htdig/ChangeLog
+++ b/net-www/htdig/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for net-www/htdig
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/htdig/ChangeLog,v 1.6 2002/04/25 16:14:55 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/htdig/ChangeLog,v 1.7 2002/05/22 22:51:14 seemant Exp $
+
+*htdig-3.1.6-r3 (22 May 2002)
+
+  22 May 2002; Seemant Kulleen <seemant@gentoo.org> htdig-3.1.6-r3.ebuild
+  files/digest-htdig-3.1.6-r3 :
+
+  Fixes the /var/htdig/db directory, and pkg_postinst() now runs the first
+  run of rundig.  Thanks to steve_flack@ntlworld.com (Steve Flack) in bug
+  #986.
 
 *htdig-3.1.6-r2 (25 Apr 2002)
 
