--- a/app-text/gnome-spell/ChangeLog
+++ b/app-text/gnome-spell/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/gnome-spell
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-spell/ChangeLog,v 1.3 2002/04/04 16:07:41 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-spell/ChangeLog,v 1.4 2002/05/22 23:19:43 spider Exp $
+
+*gnome-spell-1.0_pre1 (22 May 2002)
+  22 May 2002; Spider <spider@gentoo.org> gnome-spell-1.0_pre1.ebuild : 
+  adding the pre release as well. 
 
   4 Apr 2002; M.Schlemmer <azarah@gentoo.org> :
 
