--- a/x11-libs/gtk-engines/ChangeLog
+++ b/x11-libs/gtk-engines/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/gtk-engines
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-engines/ChangeLog,v 1.2 2002/04/14 09:45:33 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-engines/ChangeLog,v 1.3 2002/05/22 23:57:59 spider Exp $
+
+*gtk-engines-1.9.0 (22 May 2002)
+  22 May 2002; Spider <spider@gentoo.org> gtk-engines-1.9.0.ebuild :
+  Theme engines for gtk+-2.0 this time
+
 
   14 Apr 2002; M.Schlemmer <azarah@gentoo.org> gtk-engines-0.12-r2 :
 
