--- a/net-news/pan/ChangeLog
+++ b/net-news/pan/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-news/pan
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-news/pan/ChangeLog,v 1.5 2002/04/07 04:03:10 jhhudso Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/pan/ChangeLog,v 1.6 2002/05/23 00:29:23 spider Exp $
+
+*pan-0.11.92 (22 May 2002) 
+  22 May 2002; Spider <spider@gentoo.org> pan-0.11.92.ebuild: 
+  gnome2 port of pan
 
 *pan-0.11.2.91 (6 Apr 2002)
 
