--- a/app-office/mrproject/ChangeLog
+++ b/app-office/mrproject/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/mrproject
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-office/mrproject/ChangeLog,v 1.2 2002/05/23 00:14:59 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/mrproject/ChangeLog,v 1.3 2002/05/23 19:15:17 spider Exp $
+
+*mrproject-0.5.92 (23 May 2002)
+  23 May 2002; Spider <spider@gentoo.org> mrproject-0.5.92 :
+  New version again  
 
 *mrproject-0.5.91 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> mrproject-0.5.91 :
