--- a/dev-libs/libmrproject/ChangeLog
+++ b/dev-libs/libmrproject/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libmrproject
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmrproject/ChangeLog,v 1.1 2002/05/23 00:18:33 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmrproject/ChangeLog,v 1.2 2002/05/23 19:15:17 spider Exp $
+
+*libmrproject-0.3 (23 May 2002)
+  23 May 2002; Spider <spider@gentoo.org> libmrproject-0.3.ebuild :
+  Updated companinon for mrproject  
 
 *libmrproject-0.2 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> libmrproject-0.2.ebuild :
