--- a/gnome-base/bonobo-activation/ChangeLog
+++ b/gnome-base/bonobo-activation/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/bonobo-activation
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.1 2002/05/22 20:52:17 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/bonobo-activation/ChangeLog,v 1.2 2002/05/23 19:15:17 spider Exp $
+
+*bonobo-activation-0.9.9 (23 May 2002)
+  23  May 2002; Spider <spider@gentoo.org> bonobo-activation-0.9.9.ebuild:
+  New version out
+
 
 *bonobo-activation-0.9.8 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> bonobo-activation-0.9.8.ebuild:
