--- a/net-libs/linc/ChangeLog
+++ b/net-libs/linc/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for net-libs/linc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/ChangeLog,v 1.1 2002/05/22 23:27:50 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/ChangeLog,v 1.2 2002/05/23 19:15:18 spider Exp $
 
+
+*linc-0.1.22 (23 May 2002)
+  23 May 2002; Spider <spider@gentoo.org> linc-0.1.22.ebuild :
+  New version released
 
 *linc-0.1.21-r1 (22 May 2002)
   22 May 2002; Spider <spider@gentoo.org> linc-0.1.21-r1.ebuild ChangeLog:
