--- a/dev-perl/CORBA-ORBit/ChangeLog
+++ b/dev-perl/CORBA-ORBit/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/CORBA-ORBit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CORBA-ORBit/ChangeLog,v 1.1 2002/02/01 21:53:12 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CORBA-ORBit/ChangeLog,v 1.2 2002/05/23 21:12:33 azarah Exp $
+
+*CORBA-ORBit-0.4.3-r3 (23 May 2002)
+
+  22 May 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Fix compile problem (Makefile was patched in ebuild after actual makefile was
+  called ... problem that crept in with new perl eclasses).
 
 *CORBA-ORBit-0.4.3-r1 (1 Feb 2002)
 
