--- a/media-sound/alsa-driver/ChangeLog
+++ b/media-sound/alsa-driver/ChangeLog
@@ -1,8 +1,13 @@
 # ChangeLog for media-sound/alsa-driver
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.10 2002/05/13 03:04:21 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.11 2002/05/24 01:10:35 agenkin Exp $
 
 *alsa-driver-0.9.0_rc1 (27 Apr 2002)
+
+  23 May 2002; Arcady Genkin <agenkin@thpoon.com>
+	alsa-driver-0.9.0_rc1-r7.ebuild files/alsa-modules.conf :
+
+  Aliased /dev/dsp and /dev/mixer to respective OSS emulation modules.
 
   12 May 2002; Arcady Genkin <agenkin@thpoon.com>
 	alsa-driver-0.9.0_rc1-r6.ebuild :
