--- a/app-cdr/gcombust/ChangeLog
+++ b/app-cdr/gcombust/ChangeLog
@@ -1,5 +1,6 @@
 # ChangeLog for app-cdr/gcombust
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/gcombust/ChangeLog,v 1.3 2002/05/24 05:31:14 agenkin Exp $
 
 *gcombust-0.1.50 (24 May 2002)
 
