--- a/dev-perl/Digest-MD5/ChangeLog
+++ b/dev-perl/Digest-MD5/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Digest-MD5
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Digest-MD5/ChangeLog,v 1.3 2002/05/05 16:02:26 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Digest-MD5/ChangeLog,v 1.4 2002/05/24 07:51:28 rphillips Exp $
+
+*Digest-MD5-2.20 (24 May 2002)
+
+  24 May 2002; Ryan Phillips <rphillips@gentoo.org> Digest-MD5-2.20.ebuild
+  files/digest-Digest-MD5-2.20 :
+
+  New version. Fixes #2968
 
 *Digest-MD5-2.17-r1 (5 May 2002)
 
