--- a/app-cdr/gcombust/ChangeLog
+++ b/app-cdr/gcombust/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-cdr/gcombust
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/gcombust/ChangeLog,v 1.3 2002/05/24 05:31:14 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/gcombust/ChangeLog,v 1.4 2002/05/24 10:46:06 seemant Exp $
+
+*gcombust-0.1.50-r1 (24 May 2002)
+
+  24 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  gcombust-0.1.50-r1.ebuild files/digest-gcombust-0.1.50-r1 :
+
+  NLS fix so that it won't break when there is no system libintl.h file.
 
 *gcombust-0.1.50 (24 May 2002)
 
