--- a/media-libs/quicktime4linux/ChangeLog
+++ b/media-libs/quicktime4linux/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-libs/quicktime4linux
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/quicktime4linux/ChangeLog,v 1.2 2002/03/21 15:51:06 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/quicktime4linux/ChangeLog,v 1.3 2002/05/24 12:09:39 seemant Exp $
+
+*quicktime4linux-1.5.5 (24 May 2002)
+
+  24 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  quicktime4linux-1.5.5.ebuild files/digest-quicktime4linux-1.5.5 :
+
+  Version bump thanks to gentoo-bugs@devrieze.net (Paul de Vrieze) in bug
+  # 1601.  We need an alternative to this library, since the loss of 
+  its configure step means no cross-compilation is possible.
 
 *quicktime4linux-1.3 (21 Mar 2002)
 
