--- a/net-www/mozilla/ChangeLog
+++ b/net-www/mozilla/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mozilla
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.13 2002/05/13 20:30:49 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.14 2002/05/24 21:36:06 sandymac Exp $
+
+*mozilla-1.0_rc3 (24 May 2002)
+
+  24 May 2002; William McArthur <sandymac@gentoo.org> mozilla-1.0_rc3.ebuild:
+
+  Updated to 1.0rc3. (Simply bumped the ebuild filename.
 
 *mozilla-1.0_rc2 (13 May 2002)
 
