--- a/sys-apps/pam-login/ChangeLog
+++ b/sys-apps/pam-login/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/pam-login
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/ChangeLog,v 1.1 2002/04/28 14:19:31 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pam-login/ChangeLog,v 1.2 2002/05/26 10:34:12 azarah Exp $
+
+*pam-login-3.6 (26 May 2002)
+
+  26 May 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Resolve USE="-nls" compile issues.
 
 *pam-login-3.6 (28 Apr 2002)
 
