--- a/media-sound/xmms/ChangeLog
+++ b/media-sound/xmms/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/xmms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/ChangeLog,v 1.10 2002/05/19 19:03:41 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms/ChangeLog,v 1.11 2002/05/26 14:05:33 azarah Exp $
+
+*xmms-1.2.7-r6 (19 May 2002)
+
+  26 May 2002; Martin Schlemmer <azarah@gentoo.org> xmms-1.2.7-r6.ebuild :
+
+  Change it to depend on latest avifile, and drop the suffix patch
+  for avifile-config.
 
 *xmms-1.2.7-r5 (19 May 2002)
 
