--- a/media-video/avi4xmms/ChangeLog
+++ b/media-video/avi4xmms/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/avi4xmms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/avi4xmms/ChangeLog,v 1.1 2002/03/28 11:53:02 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/avi4xmms/ChangeLog,v 1.2 2002/05/26 14:05:33 azarah Exp $
+
+*avi4xmms-0.1-r1 (26 May 2002)
+
+  26 May 2002; Martin Schlemmer <azarah@gentoo.org :
+
+  Patch to work with avifile-0.7.4.
 
 *avi4xmms-0.1 (28 Mar 2002)
 
