--- a/media-video/avifile/ChangeLog
+++ b/media-video/avifile/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/avifile
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.13 2002/05/25 19:30:38 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/avifile/ChangeLog,v 1.14 2002/05/26 14:05:33 azarah Exp $
+
+*avifile-0.7.4-20020426-r2 (26 May 2002)
+
+  26 May 2002; Martin Schlemmer <azarah@gentoo.org> :
+
+  Remove the suffix added to all binaries.
 
 *avifile-0.7.4-20020426 (25 May 2002)
 
