--- a/kde-base/arts/ChangeLog
+++ b/kde-base/arts/ChangeLog
@@ -1,12 +1,12 @@
 # ChangeLog for kde-base/arts
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/ChangeLog,v 1.2 2002/05/13 20:38:53 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/ChangeLog,v 1.3 2002/05/26 16:23:53 danarmak Exp $
 
-*arts-1.0.1 (13 May 2002)
+*arts-1.0.1 (24 May 2002)
 
-  13 May 2002; Bart Verwilst <verwilst@gentoo.org> Changelog :
- 
-  New version! bugfix release, part of KDE 3.0.1
+  24 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+
+  Bugfix release (part of KDE 3.0.1).
 
 *arts-1.0 (4 Apr 2002)
 
