--- a/kde-base/kdeaddons/ChangeLog
+++ b/kde-base/kdeaddons/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeaddons
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.3 2002/05/20 17:06:42 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaddons/ChangeLog,v 1.4 2002/05/26 16:23:53 danarmak Exp $
+
+*kdeaddons-3.0.1 (24 May 2002)
+
+  24 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+
+  Bugfix release (KDE 3.0.1). Ebuild cleanup.
 
   20 Apr 2002; Dan Armak <danarmak@gentoo.org. Changelog:
   
