--- a/kde-base/kdeadmin/ChangeLog
+++ b/kde-base/kdeadmin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeadmin
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeadmin/ChangeLog,v 1.2 2002/04/04 20:09:22 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeadmin/ChangeLog,v 1.3 2002/05/26 16:23:53 danarmak Exp $
+
+*kdeadmin-3.0.1 (24 May 2002)
+
+  24 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+
+  Bugfix release (KDE 3.0.1). Bump rpm dep to 4.0.4-r1, which fixes some ilbpopt problems.
 
 *kdeadmin-3.0 (4 Apr 2002)
 
