--- a/kde-base/kdeartwork/ChangeLog
+++ b/kde-base/kdeartwork/ChangeLog
@@ -1,12 +1,16 @@
 # ChangeLog for kde-base/kdeartwork
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.5 2002/05/15 13:38:09 verwilst Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork/ChangeLog,v 1.6 2002/05/26 16:23:53 danarmak Exp $
 
-*kdeartwork-3.0.1 (14 May 2002)
+  26 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :
 
-  14 May 2002; Bart Verwilst <verwilst@gentoo.org> Changelog :
+  Add missing dep on ~kdebase-$PV.
 
-  New bugfix-release.. Enjoy!
+*kdeartwork-3.0.1 (24 May 2002)
+
+  24 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+
+  Bugfix release (KDE 3.0.1). Ebuild cleanup.
 
 *kdeartwork-3.0-r1 (22 Apr 2002)
 
