--- a/kde-base/kdemultimedia/ChangeLog
+++ b/kde-base/kdemultimedia/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdemultimedia
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.5 2002/05/12 18:26:23 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia/ChangeLog,v 1.6 2002/05/26 16:23:53 danarmak Exp $
+
+*kdemultimedia-3.0.1 (24 May 2002)
+
+  24 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+
+  Bugfix release (KDE 3.0.1).
 
   12 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
   
